--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.0.0",
     "eslint-loader": "^4.0.2",
